--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@
         <div class="footer-column">
             <h3 class="section-title">Let's Message me</h3>
 
+        <form class="contact">
+            <input type="text" placeholder="Your Name">
+            <input type="email" name="" placeholder="Your Email">
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <input class="btn-primary" type="submit" value="submit">
+
+
+        </form>
         </div>
     </footer>
 </body>
